chore: added db path to appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=./db/employees.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
