feat: completed integration of jwt with a login endpoint returning a valid token

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./db/employees.db"
+    "Employees": "Data Source=./db/employees.db"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
